--- a/piedrapapeltijera.html
+++ b/piedrapapeltijera.html
@@ -4,27 +4,33 @@
         <meta charset="uts-8" />
         <title>Rock, paper, scissor</title>
         <script>
+            function aleatorio(min, max) {
+                    return Math.floor(Math.random() * (max - min + 1) + min)
+            }
+            function choise(move) {
+                let result = ""
+                if(move == 1) {
+                    result = "Rock"
+                } else if(move == 2) {
+                    result = "Paper"
+                } else if(move == 3) {
+                    result = "Scissor"
+                } else {
+                    result = "BADLY CHOSEN"
+                }
+                return result
+            }
             // 1 is rock, 2 is paper, 3 is scissor
             let player = 0
-            let pc = 1
+            let min = 1
+            let max = 3
+            let pc = aleatorio(1,3)
             player = prompt("Choose: 1 for rock, 2 for paper, 3 for scissor")
             //alert("Choose " + player)
-            if(player == 1) {
-                alert("You chose rock")
-            } else if(player == 2) {
-                alert("You chose paper")
-            } else if(player == 3) {
-                alert("You chose scissor")
-            } else {
-                alert("You chose PERDER")
-            }
-            if(pc == 1) {
-                alert("PC choose rock")
-            } else if(pc == 2) {
-                alert("PC choose paper")
-            } else if(pc == 3) {
-                alert("PC choose scissor")
-            }
+
+            alert("PC choose: " + choise(pc))
+            alert("You choose: " + choise(player))
+
             // COMBAT
             if(pc == player){
                 alert("TIE")
