Class-12 Class-13: Replaced the string creation by using template literals

--- a/piedrapapeltijera.html
+++ b/piedrapapeltijera.html
@@ -46,7 +46,7 @@
                 }
             }
 
-            alert("You won " + victories + " times. You lost " + defeats + " times.")
+            alert(`You won ${victories} times. You lost ${defeats} times.`)
 
             
             </script>
