Class-18 Class-19: Conected html with js, added "addEventListener" and gave the buttons a function

--- a/mokepon/mokepon.html
+++ b/mokepon/mokepon.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>MOKEPON!</title>
+        <script src="./js/mokepon.js"></script>
     </head>
     <body>
         <h1>MOKEPON! 🔥💧🌱</h1>
@@ -20,7 +21,7 @@
             <input type="radio" name="pet" id="ratigueya"/>
 
 
-            <button>Select</button>
+            <button id="button-pet">Select</button>
         </section>
         
         <section id="select-atack">
@@ -30,9 +31,9 @@
             <p>The enemy's pet has <span>3</span> lives</p>
 
             <p>
-                <button>Fire 🔥</button>
-                <button>Water 💧</button>
-                <button>Land 🌱</button>
+                <button id=" button-fire">Fire 🔥</button>
+                <button id=" button-water">Water 💧</button>
+                <button id=" button-land">Land 🌱</button>
             </p>
         </section>
 
@@ -41,7 +42,7 @@
         </section>
 
         <section id="reset">
-            <button>Reset</button>
+            <button id=" button-reset">Reset</button>
         </section>
    
     </body>
