Class-20 Class-21: Manipulated de DOM to choose the player's pet by using "innerHTML"

--- a/mokepon/mokepon.html
+++ b/mokepon/mokepon.html
@@ -27,8 +27,8 @@
         <section id="select-atack">
             <h2>Choose your atack</h2>
 
-            <p>Your pet has <span>3</span> lives</p>
-            <p>The enemy's pet has <span>3</span> lives</p>
+            <p>Your pet <span id="player-pet"></span> has <span>3</span> lives</p>
+            <p>The enemy's pet <span id="enemy's-pet"></span> has <span>3</span> lives</p>
 
             <p>
                 <button id=" button-fire">Fire 🔥</button>
