--- a/mokepon/mokepon.html
+++ b/mokepon/mokepon.html
@@ -24,16 +24,16 @@
             <button id="button-pet">Select</button>
         </section>
         
-        <section id="select-atack">
-            <h2>Choose your atack</h2>
+        <section id="select-attack">
+            <h2>Choose your attack</h2>
 
             <p>Your pet <span id="player-pet"></span> has <span>3</span> lives</p>
-            <p>The enemy's pet <span id="enemy's-pet"></span> has <span>3</span> lives</p>
+            <p>The enemy's pet <span id="enemys-pet"></span> has <span>3</span> lives</p>
 
             <p>
-                <button id=" button-fire">Fire 🔥</button>
-                <button id=" button-water">Water 💧</button>
-                <button id=" button-land">Land 🌱</button>
+                <button id="button-fire">Fire 🔥</button>
+                <button id="button-water">Water 💧</button>
+                <button id="button-land">Land 🌱</button>
             </p>
         </section>
 
