Class-24 Class-25: Declared the function to choose a random enemy's attack, also created the message showing the chosen attacks

--- a/mokepon/mokepon.html
+++ b/mokepon/mokepon.html
@@ -37,8 +37,8 @@
             </p>
         </section>
 
-        <section id="mensajes">
-            <p>Your pet attacked with FIRE, the enemy's pet attacked with LAND - YOU WIN 🎉</p>
+        <section id="messages">
+            
         </section>
 
         <section id="reset">
