--- a/mokepon/mokepon.html
+++ b/mokepon/mokepon.html
@@ -27,8 +27,8 @@
         <section id="select-attack">
             <h2>Choose your attack</h2>
 
-            <p>Your pet <span id="player-pet"></span> has <span>3</span> lives</p>
-            <p>The enemy's pet <span id="enemys-pet"></span> has <span>3</span> lives</p>
+            <p>Your pet <span id="player-pet"></span> has <span id="player-lives">3</span> lives</p>
+            <p>The enemy's pet <span id="enemys-pet"></span> has <span id="enemy-lives">3</span> lives</p>
 
             <p>
                 <button id="button-fire">Fire 🔥</button>
