--- a/mokepon/mokepon.html
+++ b/mokepon/mokepon.html
@@ -4,9 +4,10 @@
         <meta charset="utf-8" />
         <title>MOKEPON!</title>
         <script src="./js/mokepon.js"></script>
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <h1>MOKEPON! 🔥💧🌱</h1>
+        <h1 class="title">MOKEPON! 🔥💧🌱</h1>
 
         <section id="select-pet">
             <h2>Choose your pet</h2>
