Class-34 Class-35: Implemented Flexbox and the box model by recognizing its parts

--- a/mokepon/mokepon.html
+++ b/mokepon/mokepon.html
@@ -7,18 +7,18 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <h1 class="title">MOKEPON! 🔥💧🌱</h1>
-
         <section id="select-pet">
+            <h1 class="title">MOKEPON! 🔥💧🌱</h1>
+
             <h2>Choose your pet</h2>
 
-            <label for="hipodoge">Hipodoge</label>
+            <label class="mokepon-cards" for="hipodoge">Hipodoge</label>
             <input type="radio" name="pet" id="hipodoge"/>
 
-            <label for="capipego">Capipego</label>
+            <label class="mokepon-cards" for="capipego">Capipego</label>
             <input type="radio" name="pet" id="capipego">
 
-            <label for="ratigueya">Ratigueya</label>
+            <label class="mokepon-cards" for="ratigueya">Ratigueya</label>
             <input type="radio" name="pet" id="ratigueya"/>
 
 
@@ -26,6 +26,8 @@
         </section>
         
         <section id="select-attack">
+            <h1 class="title">MOKEPON! 🔥💧🌱</h1>
+
             <h2>Choose your attack</h2>
 
             <p>Your pet <span id="player-pet"></span> has <span id="player-lives">3</span> lives</p>
